--- a/code/webServer/FlaskApp/templates/index.html
+++ b/code/webServer/FlaskApp/templates/index.html
@@ -8,23 +8,21 @@
 		<hr>
 		<h3>Onboard WebCam Server</h3>
 		<img id="fr" src="{{ url_for('video_feed') }}" alt="Onboard Video Stream"></img>
-		<!--<script>
-			function updateImage()
-			{
-				fetch("/home/pi/Workspace/Canyonero/code/webServer/FlaskApp/templates/frame.png")
-					.then(response => response.blob())
-					.then(function(myBlob){
-						URL.revokeObjectURL(my_img.src);
-						my_img.src = URL.createObjectURL(myBlob);
-					});
-			}
-			const my_interval = setInterval(updateImage, 200);
-		</script>-->
 		<hr>
-		<p>Date/Time: <span id="datetime"></span></p>
+		<h4>@CVH95</h4>
+		<p>Date / Time: <span id="date"></span> / <span id="time"></span></p>
 		<script>
-			var dt = new Date();
-			document.getElementById("datetime").innerHTML = dt.toUTCString();
+				var dt = new Date();
+				document.getElementById("date").innerHTML = dt.toDateString();		
+		</script>
+		<script>
+			var tt = setInterval(Timers, 1000)
+			
+			function Timers(){
+					var d = new Date();
+					var T = d.toLocaleTimeString();
+					document.getElementById("time").innerHTML = T;
+			}
 		</script>
 	</body>
 </html>
